<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rlLi"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/newone"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LogIn" >

    <EditText
        android:id="@+id/etLiUid"
        android:gravity="center"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textStyle="bold"
        android:ems="10"
        android:hint="@string/HintUid" >
       
    </EditText>

    <EditText
        android:id="@+id/etLiPwd"
        android:textStyle="bold"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLiUid"
        android:gravity="center"
        android:enabled="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hintPwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLiLogIn"
        android:layout_width="100dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:enabled="true"
        
        
        android:gravity="center"
        android:text="@string/btnSubmit" />

    <Button
        android:id="@+id/btnLiSignUp"
        
        android:layout_width="100dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLiLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
       
        android:text="@string/btnSignUp" />

   

</RelativeLayout>
